Fixed responsive button spacing

--- a/main.css
+++ b/main.css
@@ -60,6 +60,7 @@ h1 {
 
 
 form {
+	font-size: 18px;
 	background-color: #C4C4C4;
 	padding: 20px;
 	margin: auto;
@@ -114,10 +115,9 @@ input[type=radio]:checked + label{
 }
 
 .radio-group input {
+	width: 18px;
+	height: 18px;
 	margin: 1%;
-}
-
-.radio-group label {
 	vertical-align: middle;
 }
 
@@ -188,7 +188,11 @@ input[type=radio]:checked + label{
 	font-size: 30px;
 	}
 
-	.radio-group {
-	font-size: 14px;
+	input[type="radio"] {
+	margin: 10px;
+	}
+
+	.score {
+	font-size: 18px;	
 	}
 }
